--- a/nextflow.config
+++ b/nextflow.config
@@ -9,44 +9,8 @@
 // Global default params, used in configs
 params {
     // Input options
-    input                      = null
-    grid_search_params         = null // required for grid_search mode
-    snp_filtering_criteria     = null // required for snp_set_refinement mode
-
-
-    // References
-    genome                     = null
-    igenomes_base              = 's3://ngi-igenomes/igenomes'
-    igenomes_ignore            = false
-    fasta                      = null
-
-    // ground truth
-    ground_truth_vcf                   = null
-    freq_vcf                           = null
-    downsample_coverage                = null
-    random_seed                        = null // for downsampling crams
-    glimpse2_concordance_bins          = '0 0.05 0.10 0.15 0.20 0.25 0.30 0.35 0.40 0.45 0.5'
-    glimpse2_concordance_ac_bins       = null
-    glimpse2_concordance_allele_counts = null
-    glimpse2_groups                    = null
-    glimpse2_samples                   = null
-    glimpse2_min_val_gl                = 0
-    glimpse2_min_val_dp                = 0
-
-    // what variable to use for filtering in snp_set_refinement. Default is to use
-    // r2 if ground_truth_vcf is set, info_score otherwise
-    filter_var = null
-
-    // pipeline mode
-    mode = "imputation"
-
-    // skip imputation of certain chromosomes in the reference
-    skip_chr = null
-
-    // STITCH mandatory files and parameters
-    stitch_posfile              = null
-    stitch_K                    = null // required for imputation mode
-    stitch_nGen                 = null // required for imputation mode
+    vcf = null
+    pheno_cov_table = null
 
     // MultiQC options
     multiqc_config              = null
@@ -93,7 +57,7 @@ params {
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
 
-// STITCH specific presets
+// birneylab specific presets
 includeConfig 'conf/birneylab.config'
 
 // Load nf-core custom profiles from different Institutions
@@ -219,12 +183,6 @@ plugins {
     id 'nf-validation' // Validation of pipeline parameters and creation of an input channel from a sample sheet
 }
 
-// Load igenomes.config if required
-if (!params.igenomes_ignore) {
-    includeConfig 'conf/igenomes.config'
-} else {
-    params.genomes = [:]
-}
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
 // The JULIA depot path has been adjusted to a fixed path `/usr/local/share/julia` that needs to be used for packages in the container.
 // See https://apeltzer.github.io/post/03-julia-lang-nextflow/ for details on that. Once we have a common agreement on where to keep Julia packages, this is adjustable.
