--- a/conf/birneylab.config
+++ b/conf/birneylab.config
@@ -4,26 +4,4 @@
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 */
 
-profiles {
-    medaka {
-        process {
-            withName: STITCH_IMPUTATION {
-                ext.args2 = [
-                    "regenerateInputWithDefaultValues": "TRUE"              ,
-                    "expRate"                         : 2                   ,
-                    "niterations"                     : 100                 ,
-                    "shuffleHaplotypeIterations"      : "'seq(4, 88, 4)'"   ,
-                    "refillIterations"                : "'c(6, 10, 14, 18)'",
-                    "shuffle_bin_radius"              : 1000                ,
-                    "plot_shuffle_haplotype_attempts" : "TRUE"              ,
-                ].collect { "--${it.key} ${it.value}" }.join (' ')
-            }
-        }
-
-        params {
-            skip_chr        = "MT"
-    	    genome          = null
-    	    igenomes_ignore = true
-        }
-    }
-}
+profiles {}
