--- a/conf/test.config
+++ b/conf/test.config
@@ -14,24 +14,12 @@ params {
     config_profile_name        = 'Test profile'
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
-    // Pipeline branch
-    mode = "imputation"
-
     // Limit resources so that this can run on GitHub Actions
     max_cpus   = 2
     max_memory = '6.GB'
     max_time   = '6.h'
 
     // Input data
-    input  = "${projectDir}/assets/test_data/csv/samplesheet_minimal.csv"
-
-    // Genome references
-    genome          = null
-    igenomes_ignore = true
-    fasta           = "${projectDir}/assets/test_data/fasta/test_reference.fa"
-
-    // STITCH auxiliary files and parameters
-    stitch_posfile = "${projectDir}/assets/test_data/stitch/posfile_2_contigs.tsv"
-    stitch_K       = 2
-    stitch_nGen    = 1
+    vcf             = "${projectDir}/assets/test_data/vcf/in.vcf.gz"
+    pheno_cov_table = "${projectDir}/assets/test_data/csv/pheno_cov_table.csv"
 }
