--- a/conf/birneylab.config
+++ b/conf/birneylab.config
@@ -4,4 +4,22 @@
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 */
 
-profiles {}
+profiles {
+    stitch {
+        process {
+            withName:VCF_TO_PGEN {
+                ext.args = "fill-missing-from-dosage --max-alleles 2 --min-alleles 2"
+            }
+        }
+    }
+    f2_crosses {
+        process {
+            withName:LOCO_GRM {
+                ext.args   = "--make-king bin"
+            }
+            withName:FULL_GRM {
+                ext.args = "--make-king bin"
+            }
+        }
+    }
+}
