--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,4 +18,13 @@ process {
             pattern: '*_versions.yml'
         ]
     }
+    withName:VCF_TO_PGEN {
+        ext.args = "--max-alleles 2 --min-alleles 2"
+    }
+    withName:LOCO_GRM {
+        ext.args = "--make-rel bin"
+    }
+    withName:FULL_GRM {
+        ext.args = "--make-rel bin"
+    }
 }
