--- a/nextflow.config
+++ b/nextflow.config
@@ -57,9 +57,6 @@ params {
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
 
-// birneylab specific presets
-includeConfig 'conf/birneylab.config'
-
 // Load nf-core custom profiles from different Institutions
 try {
     includeConfig "${params.custom_config_base}/nfcore_custom.config"
@@ -216,20 +213,23 @@ dag {
 }
 
 manifest {
-    name            = 'birneylab/stitchimpute'
+    name            = 'birneylab/flexlmm'
     //name            = 'nf-core/stitchimpute'
     author          = """Saul Pierotti"""
-    homePage        = 'https://github.com/birneylab/stitchimpute'
+    homePage        = 'https://github.com/birneylab/flexlmm'
     //homePage        = 'https://github.com/nf-core/stitchimpute'
-    description     = """A pipeline for imputing genotypes using STITCH, evaluating imputation performance against a ground truth, optimising imputation parameters, and refining the SNP set used"""
+    description     = "Flexible linear mixed model framework for Genome Wide Association Studies"
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.04.0'
-    version = '8.1dev'
+    version = '0.1dev'
     doi             = ''
 }
 
 // Load modules.config for DSL2 module specific options
 includeConfig 'conf/modules.config'
+
+// birneylab specific presets
+includeConfig 'conf/birneylab.config'
 
 // Function to ensure that resource requirements don't go beyond
 // a maximum limit
