--- a/nextflow.config
+++ b/nextflow.config
@@ -9,8 +9,9 @@
 // Global default params, used in configs
 params {
     // Input options
-    vcf = null
-    pheno_cov_table = null
+    vcf   = null
+    pheno = null
+    covar = null
 
     // MultiQC options
     multiqc_config              = null
