--- a/conf/birneylab.config
+++ b/conf/birneylab.config
@@ -5,20 +5,13 @@
 */
 
 profiles {
-    stitch {
+    medaka {
         process {
             withName:VCF_TO_PGEN {
-                ext.args = "fill-missing-from-dosage --max-alleles 2 --min-alleles 2"
+                ext.args = "fill-missing-from-dosage --chr-set 24"
             }
-        }
-    }
-    f2_crosses {
-        process {
-            withName:LOCO_GRM {
-                ext.args   = "--make-king bin"
-            }
-            withName:FULL_GRM {
-                ext.args = "--make-king bin"
+            withName:ESTIMATE_FREQ {
+                ext.args = "--chr-set 24"
             }
         }
     }
