--- a/conf/test.config
+++ b/conf/test.config
@@ -20,6 +20,8 @@ params {
     max_time   = '6.h'
 
     // Input data
-    vcf             = "${projectDir}/assets/test_data/vcf/in.vcf.gz"
-    pheno_cov_table = "${projectDir}/assets/test_data/csv/pheno_cov_table.csv"
+    vcf   = "${projectDir}/assets/test_data/vcf/in.vcf.gz"
+    freq  = "${projectDir}/assets/test_data/vcf/in.vcf.gz"
+    pheno = "${projectDir}/assets/test_data/csv/pheno_cov_table.csv"
+    covar = "${projectDir}/assets/test_data/csv/pheno_cov_table.csv"
 }
