--- a/nextflow.config
+++ b/nextflow.config
@@ -12,6 +12,7 @@ params {
     vcf   = null
     pheno = null
     covar = null
+    freq  = null
 
     // MultiQC options
     multiqc_config              = null
