--- a/conf/birneylab.config
+++ b/conf/birneylab.config
@@ -11,7 +11,7 @@ profiles {
                 ext.args = "fill-missing-from-dosage --chr-set 24"
             }
             withName:ESTIMATE_FREQ {
-                ext.args = "--chr-set 24"
+                ext.args = "--chr-set 24 --new-id-max-allele-len 10 ."
             }
         }
     }
