--- a/conf/birneylab.config
+++ b/conf/birneylab.config
@@ -13,6 +13,12 @@ profiles {
             withName:ESTIMATE_FREQ {
                 ext.args = "--chr-set 24 --new-id-max-allele-len 10 missing"
             }
+            withName:FULL_GRM {
+                ext.args = "--maf 0.01"
+            }
+            withName:LOCO_GRM {
+                ext.args = "--maf 0.01"
+            }
         }
     }
 }
