--- a/conf/test.config
+++ b/conf/test.config
@@ -22,6 +22,8 @@ params {
     // Input data
     vcf   = "${projectDir}/assets/test_data/vcf/in.vcf.gz"
     freq  = "${projectDir}/assets/test_data/vcf/in.vcf.gz"
-    pheno = "${projectDir}/assets/test_data/csv/pheno_cov_table.csv"
-    covar = "${projectDir}/assets/test_data/csv/pheno_cov_table.csv"
+    pheno = "${projectDir}/assets/test_data/tsv/pheno.tsv"
+
+    // phenotypes options
+    quantile_normalise = true
 }
