--- a/nextflow.config
+++ b/nextflow.config
@@ -14,6 +14,10 @@ params {
     covar = null
     freq  = null
 
+    // phenotypes options
+    quantile_normalise = false
+    standardise        = false
+
     // MultiQC options
     multiqc_config              = null
     multiqc_title               = null
