--- a/conf/birneylab.config
+++ b/conf/birneylab.config
@@ -8,16 +8,18 @@ profiles {
     medaka {
         process {
             withName:VCF_TO_PGEN {
-                ext.args = "fill-missing-from-dosage --chr-set 24"
+                ext.args = '--chr-set 24'
             }
             withName:ESTIMATE_FREQ {
-                ext.args = "--chr-set 24 --new-id-max-allele-len 10 missing"
+                ext.args = '--chr-set 24'
             }
-            withName:FULL_GRM {
-                ext.args = "--maf 0.01"
-            }
-            withName:LOCO_GRM {
-                ext.args = "--maf 0.01"
+        }
+    }
+    stitch {
+        process {
+            withName:VCF_TO_PGEN {
+                ext.args2 = 'dosage=DS'
+                ext.args3 = 'fill-missing-from-dosage'
             }
         }
     }
