--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,4 +18,13 @@ process {
             pattern: '*_versions.yml'
         ]
     }
+    withName:FULL_GRM {
+        ext.args = '--maf 0.01'
+    }
+    withName:LOCO_GRM {
+        ext.args = '--maf 0.01'
+    }
+    withName:TRANSFORM_PHENOTYPES {
+        ext.prefix = 'transformed_phenotypes'
+    }
 }
