--- a/conf/test.config
+++ b/conf/test.config
@@ -20,10 +20,16 @@ params {
     max_time   = '6.h'
 
     // Input data
-    vcf   = "${projectDir}/assets/test_data/vcf/in.vcf.gz"
-    freq  = "${projectDir}/assets/test_data/vcf/in.vcf.gz"
-    pheno = "${projectDir}/assets/test_data/tsv/pheno.tsv"
+    vcf    = "${projectDir}/assets/test_data/vcf/in.vcf.gz"
+    freq   = "${projectDir}/assets/test_data/vcf/in.vcf.gz"
+    pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
+    covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
+    qcovar = "${projectDir}/assets/test_data/tsv/qcovar.tsv"
 
     // phenotypes options
     quantile_normalise = true
+
+    // statistical models
+    null_model_formula = "y ~ covar1 + qcovar1"
+    model_formula      = "y ~ x + d + covar1 + qcovar1"
 }
