--- a/nextflow.config
+++ b/nextflow.config
@@ -9,14 +9,19 @@
 // Global default params, used in configs
 params {
     // Input options
-    vcf   = null
-    pheno = null
-    covar = null
-    freq  = null
+    vcf    = null
+    pheno  = null
+    covar  = null
+    qcovar = null
+    freq   = null
 
     // phenotypes options
     quantile_normalise = false
     standardise        = false
+
+    // statistical models
+    null_model_formula = null
+    model_formula      = null
 
     // MultiQC options
     multiqc_config              = null
