--- a/conf/test.config
+++ b/conf/test.config
@@ -20,16 +20,25 @@ params {
     max_time   = '6.h'
 
     // Input data
-    vcf    = "${projectDir}/assets/test_data/vcf/in.vcf.gz"
-    freq   = "${projectDir}/assets/test_data/vcf/in.vcf.gz"
+    vcf    = "${projectDir}/assets/test_data/vcf/in.vcf"
+    freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
     pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
     covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
     qcovar = "${projectDir}/assets/test_data/tsv/qcovar.tsv"
 
     // phenotypes options
-    quantile_normalise = true
+    standardise = true
 
     // statistical models
     null_model_formula = "y ~ covar1 + qcovar1"
     model_formula      = "y ~ x + d + covar1 + qcovar1"
+}
+
+process {
+    withName:GREML {
+        ext.args = {
+            ' > /dev/null || echo "Skipping for test" && ' +
+            "cat ${projectDir}/assets/test_data/other/greml.hsq > mock.hsq"
+        }
+    }
 }
