--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,6 +18,9 @@ process {
             pattern: '*_versions.yml'
         ]
     }
+    withName:ESTIMATE_FREQ {
+        ext.when = { vcf }
+    }
     withName:FULL_GRM {
         ext.args = '--maf 0.01'
     }
