--- a/conf/test.config
+++ b/conf/test.config
@@ -31,5 +31,5 @@ params {
 
     // statistical models
     null_model_formula = "y ~ covar1 + qcovar1"
-    model_formula      = "y ~ x + d + covar1 + qcovar1"
+    model_formula      = "y ~ x + (x == 1) + covar1 + qcovar1"
 }
