--- a/nextflow.config
+++ b/nextflow.config
@@ -22,6 +22,7 @@ params {
     // statistical models
     null_model_formula = null
     model_formula      = null
+    permutations       = null
 
     // MultiQC options
     multiqc_config              = null
