--- a/conf/test.config
+++ b/conf/test.config
@@ -31,6 +31,6 @@ params {
 
     // statistical models
     null_model_formula = "y ~ covar1 + qcovar1"
-    model_formula      = "y ~ x + (x == 1) + covar1 + qcovar1"
+    model_formula      = "y ~ x + (x == 1) + x:covar1 + covar1 + qcovar1"
     permutations       = 10
 }
