--- a/conf/test.config
+++ b/conf/test.config
@@ -33,4 +33,5 @@ params {
     null_model_formula = "y ~ covar1 + qcovar1"
     model_formula      = "y ~ x + (x == 1) + x:covar1 + covar1 + qcovar1"
     permutations       = 10
+    permute_by       = 'covar1'
 }
