--- a/nextflow.config
+++ b/nextflow.config
@@ -23,6 +23,7 @@ params {
     null_model_formula = null
     model_formula      = null
     permutations       = null
+    permute_by         = null
 
     // MultiQC options
     multiqc_config              = null
