--- a/nextflow.config
+++ b/nextflow.config
@@ -22,8 +22,9 @@ params {
     // statistical models
     null_model_formula = null
     model_formula      = null
-    permutations       = null
+    permutations       = 1
     permute_by         = null
+    p_thr              = 0.05
 
     // MultiQC options
     multiqc_config              = null
