--- a/conf/modules.config
+++ b/conf/modules.config
@@ -77,4 +77,25 @@ process {
             mode: params.publish_dir_mode
         ]
     }
+    withName:GET_MIN_P_DISTRIBUTION {
+        publishDir = [
+            path: { "${params.outdir}/permutations" },
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName:MANHATTAN {
+        publishDir = [
+            path: { "${params.outdir}/plots/manhattan" },
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName:QQ {
+        publishDir = [
+            path: { "${params.outdir}/plots/qq" },
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            mode: params.publish_dir_mode
+        ]
+    }
 }
