skip chr and pheno

--- a/nextflow.config
+++ b/nextflow.config
@@ -15,6 +15,10 @@ params {
     qcovar = null
     freq   = null
 
+    // run options
+    select_chr   = null
+    select_pheno = null
+
     // phenotypes options
     quantile_normalise = false
     standardise        = false
