--- a/conf/birneylab.config
+++ b/conf/birneylab.config
@@ -15,6 +15,16 @@ profiles {
             }
         }
     }
+    lmmsym {
+        process {
+            withName:VCF_TO_PGEN {
+                ext.args = '--chr-set 2'
+            }
+            withName:ESTIMATE_FREQ {
+                ext.args = '--chr-set 2'
+            }
+        }
+    }
     stitch {
         process {
             withName:VCF_TO_PGEN {
