--- a/conf/birneylab.config
+++ b/conf/birneylab.config
@@ -18,10 +18,25 @@ profiles {
     lmmsym {
         process {
             withName:VCF_TO_PGEN {
-                ext.args = '--chr-set 2'
+                ext.args = '--allow-extra-chr'
             }
             withName:ESTIMATE_FREQ {
-                ext.args = '--chr-set 2'
+                ext.args = '--allow-extra-chr'
+            }
+            withName:GET_CHR_NAMES {
+                ext.args = '--allow-extra-chr'
+            }
+            withName:MAKE_GRM {
+                ext.args = '--allow-extra-chr'
+            }
+            withName:MAKE_GRM {
+                ext.args = '--allow-extra-chr'
+            }
+            withName:SPLIT_CHR {
+                ext.args = '--allow-extra-chr'
+            }
+            withName:TRANSFORM_PHENOTYPES {
+                ext.args = '--allow-extra-chr'
             }
         }
     }
