--- a/conf/birneylab.config
+++ b/conf/birneylab.config
@@ -26,10 +26,10 @@ profiles {
             withName:GET_CHR_NAMES {
                 ext.args = '--allow-extra-chr'
             }
-            withName:MAKE_GRM {
+            withName:FULL_GRM {
                 ext.args = '--allow-extra-chr'
             }
-            withName:MAKE_GRM {
+            withName:LOCO_GRM {
                 ext.args = '--allow-extra-chr'
             }
             withName:SPLIT_CHR {
