--- a/conf/modules.config
+++ b/conf/modules.config
@@ -24,13 +24,30 @@ process {
     withName:FULL_GRM {
         ext.args = '--maf 0.01'
         publishDir = [
-            path: { "${params.outdir}/relatedness_matrix" },
+            path: { "${params.outdir}/relatedness_matrix/full_genome" },
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             mode: params.publish_dir_mode,
         ]
     }
     withName:LOCO_GRM {
         ext.args = '--maf 0.01'
+        publishDir = [
+            path: { "${params.outdir}/relatedness_matrix/loco/${meta.chr}" },
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            mode: params.publish_dir_mode,
+        ]
+    }
+    withName:RELATEDNESS {
+        ext.args = '--maf 0.01'
+        publishDir = [
+            path: {
+                meta.chr ?
+                "${params.outdir}/relatedness_matrix/loco/${meta.chr}" :
+                "${params.outdir}/relatedness_matrix/full_genome"
+            },
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            mode: params.publish_dir_mode,
+        ]
     }
     withName:TRANSFORM_PHENOTYPES {
         ext.prefix = 'transformed_phenotypes'
