--- a/conf/birneylab.config
+++ b/conf/birneylab.config
@@ -28,9 +28,19 @@ profiles {
             }
             withName:FULL_GRM {
                 ext.args = '--allow-extra-chr'
+        	publishDir = [
+        	    path: { "${params.outdir}/relatedness_matrix" },
+        	    saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+        	    mode: params.publish_dir_mode,
+        	]
             }
             withName:LOCO_GRM {
                 ext.args = '--allow-extra-chr'
+        	publishDir = [
+        	    path: { "${params.outdir}/relatedness_matrix" },
+        	    saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+        	    mode: params.publish_dir_mode,
+        	]
             }
             withName:SPLIT_CHR {
                 ext.args = '--allow-extra-chr'
