--- a/conf/modules.config
+++ b/conf/modules.config
@@ -41,8 +41,8 @@ process {
         publishDir = [
             path: {
                 meta.chr ?
-                "${params.outdir}/relatedness_matrix/loco/${meta.chr}" :
-                "${params.outdir}/relatedness_matrix/full_genome"
+                "${params.outdir}/plots/relatedness_matrix/loco" :
+                "${params.outdir}/plots/relatednss_matrix/full_genome"
             },
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             mode: params.publish_dir_mode,
@@ -50,13 +50,6 @@ process {
     }
     withName:TRANSFORM_PHENOTYPES {
         ext.prefix = 'transformed_phenotypes'
-    }
-    withName:VALIDATE_FORMULAS {
-        publishDir = [
-            path: { "${params.outdir}/model_formulas" },
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            mode: params.publish_dir_mode,
-        ]
     }
     withName:MATCH_SAMPLES {
         publishDir = [
@@ -68,20 +61,6 @@ process {
     withName:AIREML {
         publishDir = [
             path: { "${params.outdir}/variance_components/${meta.pheno}" },
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            mode: params.publish_dir_mode,
-        ]
-    }
-    withName:CHOLESKY {
-        publishDir = [
-            path: { "${params.outdir}/rotation_matrix/${meta.pheno}" },
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            mode: params.publish_dir_mode,
-        ]
-    }
-    withName:DECORRELATE {
-        publishDir = [
-            path: { "${params.outdir}/rotated_model_matrices/${meta.pheno}/${meta.chr}/" },
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             mode: params.publish_dir_mode,
         ]
