--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,6 +18,13 @@ process {
             pattern: '*_versions.yml'
         ]
     }
+    withName:VCF_TO_PGEN {
+        publishDir = [
+            path: { "${params.outdir}/genotypes" },
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            mode: params.publish_dir_mode,
+        ]
+    }
     withName:ESTIMATE_FREQ {
         ext.when = { vcf }
     }
