--- a/nextflow.config
+++ b/nextflow.config
@@ -232,7 +232,7 @@ manifest {
     description     = "Flexible linear mixed model framework for Genome Wide Association Studies"
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.04.0'
-    version = '0.1dev'
+    version = '1.0.0'
     doi             = ''
 }
 
