--- a/nextflow.config
+++ b/nextflow.config
@@ -9,11 +9,12 @@
 // Global default params, used in configs
 params {
     // Input options
-    vcf    = null
-    pheno  = null
-    covar  = null
-    qcovar = null
-    freq   = null
+    vcf     = null
+    pheno   = null
+    covar   = null
+    qcovar  = null
+    freq    = null
+    maf_min = null
 
     // run options
     select_chr   = null
