option to not use dosages

--- a/conf/birneylab.config
+++ b/conf/birneylab.config
@@ -51,10 +51,14 @@ profiles {
         }
     }
     stitch {
+        // dosage produced by STITCH sometimes has very tiny oscillations that mimic a neighbouring
+        // genotype and cause spurious association signals, so I only use hard calls
+        params {
+            use_dosage = false
+        }
         process {
             withName:VCF_TO_PGEN {
                 ext.args2 = 'dosage=DS'
-                ext.args3 = 'fill-missing-from-dosage'
             }
         }
     }
