--- a/nextflow.config
+++ b/nextflow.config
@@ -15,6 +15,7 @@ params {
     qcovar  = null
     freq    = null
     maf_min = null
+    use_dosage = true
 
     // run options
     select_chr   = null
