--- a/conf/birneylab.config
+++ b/conf/birneylab.config
@@ -44,6 +44,11 @@ profiles {
             }
             withName:SPLIT_CHR {
                 ext.args = '--allow-extra-chr'
+        	publishDir = [
+        	    path: { "${params.outdir}/genotypes" },
+        	    saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+        	    mode: params.publish_dir_mode,
+        	]
             }
             withName:TRANSFORM_PHENOTYPES {
                 ext.args = '--allow-extra-chr'
