--- a/conf/modules.config
+++ b/conf/modules.config
@@ -11,14 +11,14 @@
 */
 
 process {
-    withName: CUSTOM_DUMPSOFTWAREVERSIONS {
+    withName:CUSTOM_DUMPSOFTWAREVERSIONS {
         publishDir = [
             path: { "${params.outdir}/pipeline_info" },
             mode: params.publish_dir_mode,
             pattern: '*_versions.yml'
         ]
     }
-    withName:VCF_TO_PGEN {
+    withName:SPLIT_CHR {
         publishDir = [
             path: { "${params.outdir}/genotypes" },
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
