output original matrices

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -72,6 +72,13 @@ process {
             mode: params.publish_dir_mode,
         ]
     }
+    withName:CHOLESKY {
+        publishDir = [
+            path: { "${params.outdir}/model_matrices/${meta.pheno}/${meta.chr}/" },
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            mode: params.publish_dir_mode,
+        ]
+    }
     withName:DECORRELATE {
         publishDir = [
             path: { "${params.outdir}/model_matrices/${meta.pheno}/${meta.chr}/" },
