--- a/conf/birneylab.config
+++ b/conf/birneylab.config
@@ -7,51 +7,11 @@
 profiles {
     medaka {
         process {
-            withName:VCF_TO_PGEN {
+            withName:GENO_TO_PGEN {
                 ext.args = '--chr-set 24'
             }
             withName:ESTIMATE_FREQ {
                 ext.args = '--chr-set 24'
-            }
-        }
-    }
-    lmmsym {
-        process {
-            withName:VCF_TO_PGEN {
-                ext.args = '--allow-extra-chr'
-            }
-            withName:ESTIMATE_FREQ {
-                ext.args = '--allow-extra-chr'
-            }
-            withName:GET_CHR_NAMES {
-                ext.args = '--allow-extra-chr'
-            }
-            withName:FULL_GRM {
-                ext.args = '--allow-extra-chr'
-        	publishDir = [
-        	    path: { "${params.outdir}/relatedness_matrix" },
-        	    saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-        	    mode: params.publish_dir_mode,
-        	]
-            }
-            withName:LOCO_GRM {
-                ext.args = '--allow-extra-chr'
-        	publishDir = [
-        	    path: { "${params.outdir}/relatedness_matrix" },
-        	    saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-        	    mode: params.publish_dir_mode,
-        	]
-            }
-            withName:SPLIT_CHR {
-                ext.args = '--allow-extra-chr'
-        	publishDir = [
-        	    path: { "${params.outdir}/genotypes" },
-        	    saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-        	    mode: params.publish_dir_mode,
-        	]
-            }
-            withName:TRANSFORM_PHENOTYPES {
-                ext.args = '--allow-extra-chr'
             }
         }
     }
