--- a/nextflow.config
+++ b/nextflow.config
@@ -8,13 +8,44 @@
 
 // Global default params, used in configs
 params {
-    // Input options
-    vcf     = null
+    // VCF
+    vcf    = null
+
+    // BCF
+    bcf    = null
+
+    // Oxford-format bgen
+    bgen   = null
+    gen    = null
+    sample = null
+
+    // Plink binary format
+    bed    = null
+    bim    = null
+    fam    = null
+
+    // Plink text format
+    ped    = null
+    map_f  = null
+
+    // Plink2 format
+    pgen   = null
+    psam   = null
+    pvar   = null
+    
+    // Other input files
     pheno   = null
     covar   = null
     qcovar  = null
+
+    // plink2-format frequency file for normalising SNPs for relatedness calculation
+    // see https://www.cog-genomics.org/plink/2.0/input#read_freq
     freq    = null
+
+    // minimum allele frequency cutoff
     maf_min = null
+
+    // use dosage instead than hard calls if available
     use_dosage = true
 
     // run options
@@ -111,7 +142,6 @@ profiles {
     }
     docker {
         docker.enabled         = true
-        docker.userEmulation   = true
         conda.enabled          = false
         singularity.enabled    = false
         podman.enabled         = false
@@ -173,11 +203,6 @@ profiles {
         executor.cpus          = 16
         executor.memory        = 60.GB
     }
-    test                    { includeConfig 'conf/test.config'                    }
-    test_full               { includeConfig 'conf/test_full.config'               }
-    test_imputation         { includeConfig 'conf/test_imputation.config'         }
-    test_grid_search        { includeConfig 'conf/test_grid_search.config'        }
-    test_snp_set_refinement { includeConfig 'conf/test_snp_set_refinement.config' }
 }
 
 // Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
@@ -227,14 +252,12 @@ dag {
 
 manifest {
     name            = 'birneylab/flexlmm'
-    //name            = 'nf-core/stitchimpute'
     author          = """Saul Pierotti"""
     homePage        = 'https://github.com/birneylab/flexlmm'
-    //homePage        = 'https://github.com/nf-core/stitchimpute'
     description     = "Flexible linear mixed model framework for Genome Wide Association Studies"
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.04.0'
-    version = '1.0.6'
+    version         = '1.0.6'
     doi             = ''
 }
 
@@ -243,6 +266,9 @@ includeConfig 'conf/modules.config'
 
 // birneylab specific presets
 includeConfig 'conf/birneylab.config'
+
+// test profiles
+includeConfig 'conf/test.config'
 
 // Function to ensure that resource requirements don't go beyond
 // a maximum limit
