--- a/conf/test.config
+++ b/conf/test.config
@@ -10,28 +10,167 @@
 ----------------------------------------------------------------------------------------
 */
 
-params {
-    config_profile_name        = 'Test profile'
-    config_profile_description = 'Minimal test dataset to check pipeline function'
+profiles {
+    test {
+        params {
+            config_profile_name        = 'Test profile'
+            config_profile_description = 'Minimal test dataset to check pipeline function'
 
-    // Limit resources so that this can run on GitHub Actions
-    max_cpus   = 2
-    max_memory = '6.GB'
-    max_time   = '6.h'
+            // Limit resources so that this can run on GitHub Actions
+            max_cpus   = 2
+            max_memory = '6.GB'
+            max_time   = '6.h'
 
-    // Input data
-    vcf    = "${projectDir}/assets/test_data/vcf/in.vcf"
-    freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
-    pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
-    covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
-    qcovar = "${projectDir}/assets/test_data/tsv/qcovar.tsv"
+            // Input data
+            vcf    = "${projectDir}/assets/test_data/vcf/in.vcf"
+            freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
+            pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
+            covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
+            qcovar = "${projectDir}/assets/test_data/tsv/qcovar.tsv"
 
-    // phenotypes options
-    standardise = true
+            // phenotypes options
+            standardise = true
 
-    // statistical models
-    null_model_formula = "y ~ covar1 + qcovar1"
-    model_formula      = "y ~ x + (x == 1) + x:covar1 + covar1 + qcovar1"
-    permutations       = 10
-    permute_by       = 'covar1'
+            // statistical models
+            null_model_formula = "y ~ covar1 + qcovar1"
+            model_formula      = "y ~ x + (x == 1) + x:covar1 + covar1 + qcovar1"
+            permutations       = 10
+            permute_by       = 'covar1'
+        }
+    }
+    test_bcf {
+        params {
+            config_profile_name        = 'Test profile'
+            config_profile_description = 'Minimal test dataset to check pipeline function'
+
+            // Limit resources so that this can run on GitHub Actions
+            max_cpus   = 2
+            max_memory = '6.GB'
+            max_time   = '6.h'
+
+            // Input data
+            bcf    = "${projectDir}/assets/test_data/bcf/in.bcf"
+            freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
+            pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
+            covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
+            qcovar = "${projectDir}/assets/test_data/tsv/qcovar.tsv"
+
+            // phenotypes options
+            standardise = true
+
+            // statistical models
+            null_model_formula = "y ~ covar1 + qcovar1"
+            model_formula      = "y ~ x + (x == 1) + x:covar1 + covar1 + qcovar1"
+            permutations       = 10
+            permute_by       = 'covar1'
+        }
+    }
+    test_bgen {
+        params {
+            config_profile_name        = 'Test profile'
+            config_profile_description = 'Minimal test dataset to check pipeline function'
+
+            // Limit resources so that this can run on GitHub Actions
+            max_cpus   = 2
+            max_memory = '6.GB'
+            max_time   = '6.h'
+
+            // Input data
+            bcf    = "${projectDir}/assets/test_data/bcf/in.bcf"
+            freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
+            pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
+            covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
+            qcovar = "${projectDir}/assets/test_data/tsv/qcovar.tsv"
+
+            // phenotypes options
+            standardise = true
+
+            // statistical models
+            null_model_formula = "y ~ covar1 + qcovar1"
+            model_formula      = "y ~ x + (x == 1) + x:covar1 + covar1 + qcovar1"
+            permutations       = 10
+            permute_by       = 'covar1'
+        }
+    }
+    test_ped {
+        params {
+            config_profile_name        = 'Test profile'
+            config_profile_description = 'Minimal test dataset to check pipeline function'
+
+            // Limit resources so that this can run on GitHub Actions
+            max_cpus   = 2
+            max_memory = '6.GB'
+            max_time   = '6.h'
+
+            // Input data
+            bcf    = "${projectDir}/assets/test_data/bcf/in.bcf"
+            freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
+            pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
+            covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
+            qcovar = "${projectDir}/assets/test_data/tsv/qcovar.tsv"
+
+            // phenotypes options
+            standardise = true
+
+            // statistical models
+            null_model_formula = "y ~ covar1 + qcovar1"
+            model_formula      = "y ~ x + (x == 1) + x:covar1 + covar1 + qcovar1"
+            permutations       = 10
+            permute_by       = 'covar1'
+        }
+    }
+    test_bed {
+        params {
+            config_profile_name        = 'Test profile'
+            config_profile_description = 'Minimal test dataset to check pipeline function'
+
+            // Limit resources so that this can run on GitHub Actions
+            max_cpus   = 2
+            max_memory = '6.GB'
+            max_time   = '6.h'
+
+            // Input data
+            bcf    = "${projectDir}/assets/test_data/bcf/in.bcf"
+            freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
+            pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
+            covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
+            qcovar = "${projectDir}/assets/test_data/tsv/qcovar.tsv"
+
+            // phenotypes options
+            standardise = true
+
+            // statistical models
+            null_model_formula = "y ~ covar1 + qcovar1"
+            model_formula      = "y ~ x + (x == 1) + x:covar1 + covar1 + qcovar1"
+            permutations       = 10
+            permute_by       = 'covar1'
+        }
+    }
+    test_pgen {
+        params {
+            config_profile_name        = 'Test profile'
+            config_profile_description = 'Minimal test dataset to check pipeline function'
+
+            // Limit resources so that this can run on GitHub Actions
+            max_cpus   = 2
+            max_memory = '6.GB'
+            max_time   = '6.h'
+
+            // Input data
+            bcf    = "${projectDir}/assets/test_data/bcf/in.bcf"
+            freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
+            pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
+            covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
+            qcovar = "${projectDir}/assets/test_data/tsv/qcovar.tsv"
+
+            // phenotypes options
+            standardise = true
+
+            // statistical models
+            null_model_formula = "y ~ covar1 + qcovar1"
+            model_formula      = "y ~ x + (x == 1) + x:covar1 + covar1 + qcovar1"
+            permutations       = 10
+            permute_by       = 'covar1'
+        }
+    }
 }
