more input formats

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,7 +16,6 @@ params {
 
     // Oxford-format bgen
     bgen   = null
-    gen    = null
     sample = null
 
     // Plink binary format
@@ -26,7 +25,7 @@ params {
 
     // Plink text format
     ped    = null
-    map_f  = null
+    map_f  = null // map would conflit with built-in map function
 
     // Plink2 format
     pgen   = null
