--- a/conf/test.config
+++ b/conf/test.config
@@ -18,8 +18,8 @@ profiles {
 
             // Limit resources so that this can run on GitHub Actions
             max_cpus   = 2
-            max_memory = '6.GB'
-            max_time   = '6.h'
+            max_memory = '1.GB'
+            max_time   = '1.h'
 
             // Input data
             vcf    = "${projectDir}/assets/test_data/vcf/in.vcf"
@@ -33,7 +33,7 @@ profiles {
 
             // statistical models
             null_model_formula = "y ~ covar1 + qcovar1"
-            model_formula      = "y ~ x + (x == 1) + x:covar1 + covar1 + qcovar1"
+            model_formula      = "y ~ x + I(x == 1) + x:covar1 + covar1 + qcovar1"
             permutations       = 10
             permute_by       = 'covar1'
         }
@@ -45,8 +45,8 @@ profiles {
 
             // Limit resources so that this can run on GitHub Actions
             max_cpus   = 2
-            max_memory = '6.GB'
-            max_time   = '6.h'
+            max_memory = '1.GB'
+            max_time   = '1.h'
 
             // Input data
             bcf    = "${projectDir}/assets/test_data/bcf/in.bcf"
@@ -60,7 +60,7 @@ profiles {
 
             // statistical models
             null_model_formula = "y ~ covar1 + qcovar1"
-            model_formula      = "y ~ x + (x == 1) + x:covar1 + covar1 + qcovar1"
+            model_formula      = "y ~ x + I(x == 1) + x:covar1 + covar1 + qcovar1"
             permutations       = 10
             permute_by       = 'covar1'
         }
@@ -72,11 +72,12 @@ profiles {
 
             // Limit resources so that this can run on GitHub Actions
             max_cpus   = 2
-            max_memory = '6.GB'
-            max_time   = '6.h'
+            max_memory = '1.GB'
+            max_time   = '1.h'
 
             // Input data
-            bcf    = "${projectDir}/assets/test_data/bcf/in.bcf"
+            bgen   = "${projectDir}/assets/test_data/oxford_bgen/in.bgen"
+            sample = "${projectDir}/assets/test_data/oxford_bgen/in.sample"
             freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
             pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
             covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
@@ -87,7 +88,7 @@ profiles {
 
             // statistical models
             null_model_formula = "y ~ covar1 + qcovar1"
-            model_formula      = "y ~ x + (x == 1) + x:covar1 + covar1 + qcovar1"
+            model_formula      = "y ~ x + I(x == 1) + x:covar1 + covar1 + qcovar1"
             permutations       = 10
             permute_by       = 'covar1'
         }
@@ -99,11 +100,12 @@ profiles {
 
             // Limit resources so that this can run on GitHub Actions
             max_cpus   = 2
-            max_memory = '6.GB'
-            max_time   = '6.h'
+            max_memory = '1.GB'
+            max_time   = '1.h'
 
             // Input data
-            bcf    = "${projectDir}/assets/test_data/bcf/in.bcf"
+            ped    = "${projectDir}/assets/test_data/ped/in.ped"
+            map_f  = "${projectDir}/assets/test_data/ped/in.map"
             freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
             pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
             covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
@@ -114,7 +116,7 @@ profiles {
 
             // statistical models
             null_model_formula = "y ~ covar1 + qcovar1"
-            model_formula      = "y ~ x + (x == 1) + x:covar1 + covar1 + qcovar1"
+            model_formula      = "y ~ x + I(x == 1) + x:covar1 + covar1 + qcovar1"
             permutations       = 10
             permute_by       = 'covar1'
         }
@@ -126,11 +128,13 @@ profiles {
 
             // Limit resources so that this can run on GitHub Actions
             max_cpus   = 2
-            max_memory = '6.GB'
-            max_time   = '6.h'
+            max_memory = '1.GB'
+            max_time   = '1.h'
 
             // Input data
-            bcf    = "${projectDir}/assets/test_data/bcf/in.bcf"
+            bed    = "${projectDir}/assets/test_data/bed/in.bed"
+            bim    = "${projectDir}/assets/test_data/bed/in.bim"
+            fam    = "${projectDir}/assets/test_data/bed/in.fam"
             freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
             pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
             covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
@@ -141,7 +145,7 @@ profiles {
 
             // statistical models
             null_model_formula = "y ~ covar1 + qcovar1"
-            model_formula      = "y ~ x + (x == 1) + x:covar1 + covar1 + qcovar1"
+            model_formula      = "y ~ x + I(x == 1) + x:covar1 + covar1 + qcovar1"
             permutations       = 10
             permute_by       = 'covar1'
         }
@@ -153,11 +157,13 @@ profiles {
 
             // Limit resources so that this can run on GitHub Actions
             max_cpus   = 2
-            max_memory = '6.GB'
-            max_time   = '6.h'
+            max_memory = '1.GB'
+            max_time   = '1.h'
 
             // Input data
-            bcf    = "${projectDir}/assets/test_data/bcf/in.bcf"
+            pgen   = "${projectDir}/assets/test_data/pgen/in.pgen"
+            psam   = "${projectDir}/assets/test_data/pgen/in.psam"
+            pvar   = "${projectDir}/assets/test_data/pgen/in.pvar"
             freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
             pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
             covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
@@ -168,7 +174,7 @@ profiles {
 
             // statistical models
             null_model_formula = "y ~ covar1 + qcovar1"
-            model_formula      = "y ~ x + (x == 1) + x:covar1 + covar1 + qcovar1"
+            model_formula      = "y ~ x + I(x == 1) + x:covar1 + covar1 + qcovar1"
             permutations       = 10
             permute_by       = 'covar1'
         }
