--- a/conf/test.config
+++ b/conf/test.config
@@ -23,7 +23,7 @@ profiles {
 
             // Input data
             vcf    = "${projectDir}/assets/test_data/vcf/in.vcf"
-            freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
+            freq   = "${projectDir}/assets/test_data/freq/in.afreq"
             pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
             covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
             qcovar = "${projectDir}/assets/test_data/tsv/qcovar.tsv"
@@ -50,7 +50,7 @@ profiles {
 
             // Input data
             bcf    = "${projectDir}/assets/test_data/bcf/in.bcf"
-            freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
+            freq   = "${projectDir}/assets/test_data/freq/in.afreq"
             pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
             covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
             qcovar = "${projectDir}/assets/test_data/tsv/qcovar.tsv"
@@ -78,7 +78,7 @@ profiles {
             // Input data
             bgen   = "${projectDir}/assets/test_data/oxford_bgen/in.bgen"
             sample = "${projectDir}/assets/test_data/oxford_bgen/in.sample"
-            freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
+            freq   = "${projectDir}/assets/test_data/freq/in.afreq"
             pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
             covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
             qcovar = "${projectDir}/assets/test_data/tsv/qcovar.tsv"
@@ -106,7 +106,7 @@ profiles {
             // Input data
             ped    = "${projectDir}/assets/test_data/ped/in.ped"
             map_f  = "${projectDir}/assets/test_data/ped/in.map"
-            freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
+            freq   = "${projectDir}/assets/test_data/freq/in.afreq"
             pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
             covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
             qcovar = "${projectDir}/assets/test_data/tsv/qcovar.tsv"
@@ -135,7 +135,7 @@ profiles {
             bed    = "${projectDir}/assets/test_data/bed/in.bed"
             bim    = "${projectDir}/assets/test_data/bed/in.bim"
             fam    = "${projectDir}/assets/test_data/bed/in.fam"
-            freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
+            freq   = "${projectDir}/assets/test_data/freq/in.afreq"
             pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
             covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
             qcovar = "${projectDir}/assets/test_data/tsv/qcovar.tsv"
@@ -164,7 +164,7 @@ profiles {
             pgen   = "${projectDir}/assets/test_data/pgen/in.pgen"
             psam   = "${projectDir}/assets/test_data/pgen/in.psam"
             pvar   = "${projectDir}/assets/test_data/pgen/in.pvar"
-            freq   = "${projectDir}/assets/test_data/vcf/in.vcf"
+            freq   = "${projectDir}/assets/test_data/freq/in.afreq"
             pheno  = "${projectDir}/assets/test_data/tsv/pheno.tsv"
             covar  = "${projectDir}/assets/test_data/tsv/covar.tsv"
             qcovar = "${projectDir}/assets/test_data/tsv/qcovar.tsv"
