--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,18 +18,11 @@ process {
             pattern: '*_versions.yml'
         ]
     }
-    withName:SPLIT_CHR {
-        publishDir = [
-            path: { "${params.outdir}/genotypes" },
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            mode: params.publish_dir_mode,
-        ]
-    }
-    withName:ESTIMATE_FREQ {
-        ext.when = { vcf }
+    withName:TRANSFORM_PHENOTYPES {
+        ext.prefix = 'transformed_phenotypes'
     }
     withName:FULL_GRM {
-        ext.args = '--maf 0.01'
+        ext.args = "--maf ${params.maf_min_grm}"
         publishDir = [
             path: { "${params.outdir}/relatedness_matrix/full_genome" },
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
@@ -37,11 +30,14 @@ process {
         ]
     }
     withName:LOCO_GRM {
-        ext.args = '--maf 0.01'
+        ext.args = "--maf ${params.maf_min_grm}"
+    }
+    withName:AIREML {
         publishDir = [
-            path: { "${params.outdir}/relatedness_matrix/loco/${meta.chr}" },
+            path: { "${params.outdir}/variance_components/${meta.pheno}" },
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             mode: params.publish_dir_mode,
+            enabled: { meta.chr == "full_genome" }
         ]
     }
     withName:RELATEDNESS {
@@ -51,37 +47,6 @@ process {
                 "${params.outdir}/plots/relatedness_matrix/loco" :
                 "${params.outdir}/plots/relatedness_matrix/full_genome"
             },
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            mode: params.publish_dir_mode,
-        ]
-    }
-    withName:TRANSFORM_PHENOTYPES {
-        ext.prefix = 'transformed_phenotypes'
-    }
-    withName:MATCH_SAMPLES {
-        publishDir = [
-            path: { "${params.outdir}/model_matrices/${meta.pheno}/${meta.chr}/" },
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            mode: params.publish_dir_mode,
-        ]
-    }
-    withName:AIREML {
-        publishDir = [
-            path: { "${params.outdir}/variance_components/${meta.pheno}" },
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            mode: params.publish_dir_mode,
-        ]
-    }
-    withName:CHOLESKY {
-        publishDir = [
-            path: { "${params.outdir}/model_matrices/${meta.pheno}/${meta.chr}/" },
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            mode: params.publish_dir_mode,
-        ]
-    }
-    withName:DECORRELATE {
-        publishDir = [
-            path: { "${params.outdir}/model_matrices/${meta.pheno}/${meta.chr}/" },
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             mode: params.publish_dir_mode,
         ]
