--- a/nextflow.config
+++ b/nextflow.config
@@ -41,8 +41,11 @@ params {
     // see https://www.cog-genomics.org/plink/2.0/input#read_freq
     freq    = null
 
-    // minimum allele frequency cutoff
+    // global minimum allele frequency cutoff
     maf_min = null
+
+    // minimum allele frequency cutoff for GRM calculation
+    maf_min_grm = 0.1
 
     // use dosage instead than hard calls if available
     use_dosage = true
