--- a/conf/modules.config
+++ b/conf/modules.config
@@ -53,7 +53,7 @@ process {
     }
     withName:FIT_MODEL_ORIG {
         publishDir = [
-            path: { "${params.outdir}/gwas/${meta.pheno}" },
+            path: { "${params.outdir}/gwas/${meta.pheno_name}" },
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             mode: params.publish_dir_mode
         ]
