--- a/conf/modules.config
+++ b/conf/modules.config
@@ -58,6 +58,13 @@ process {
             mode: params.publish_dir_mode
         ]
     }
+    withName:COMPUTE_HERITABILITY {
+        publishDir = [
+            path: { "${params.outdir}/" },
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            mode: params.publish_dir_mode
+        ]
+    }
     withName:GET_MIN_P_DISTRIBUTION {
         publishDir = [
             path: { "${params.outdir}/permutations" },
