--- a/conf/birneylab.config
+++ b/conf/birneylab.config
@@ -7,10 +7,7 @@
 profiles {
     medaka {
         process {
-            withName:GENO_TO_PGEN {
-                ext.args = '--chr-set 24'
-            }
-            withName:ESTIMATE_FREQ {
+            withName:VCF_TO_PGEN {
                 ext.args = '--chr-set 24'
             }
         }
