less file usage by not saving all perm pvals

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -65,7 +65,7 @@ process {
             mode: params.publish_dir_mode
         ]
     }
-    withName:GET_MIN_P_DISTRIBUTION {
+    withName:SUMMARISE_BY_CHR {
         publishDir = [
             path: { "${params.outdir}/permutations" },
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
