--- a/conf/modules.config
+++ b/conf/modules.config
@@ -24,7 +24,7 @@ process {
     withName:FULL_GRM {
         ext.args = "--maf ${params.maf_min_grm}"
         publishDir = [
-            path: { "${params.outdir}/relatedness_matrix/full_genome" },
+            path: { "${params.outdir}/relatedness_matrix/" },
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             mode: params.publish_dir_mode,
         ]
@@ -42,11 +42,7 @@ process {
     }
     withName:RELATEDNESS {
         publishDir = [
-            path: {
-                meta.chr ?
-                "${params.outdir}/plots/relatedness_matrix/loco" :
-                "${params.outdir}/plots/relatedness_matrix/full_genome"
-            },
+            path: "${params.outdir}/plots/relatedness_matrix/",
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             mode: params.publish_dir_mode,
         ]
