Adding new parameters --eqtl, --gtf and --window for the eQTL subworkflow.

--- a/nextflow.config
+++ b/nextflow.config
@@ -36,6 +36,11 @@ params {
     pheno   = null
     covar   = null
     qcovar  = null
+    
+    // eQTL-specific params
+    window  = 100000  // Default window size
+    gtf     = null    // Path to the GTF file
+    eqtl    = false  // Boolean to toggle eQTL sub-workflow
 
     // plink2-format frequency file for normalising SNPs for relatedness calculation
     // see https://www.cog-genomics.org/plink/2.0/input#read_freq
