Output gwas,tsv.gz file to the output directory

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -68,6 +68,13 @@ process {
             mode: params.publish_dir_mode
         ]
     }
+    withName:COMBINE_EQTL_FILES {
+        publishDir = [
+            path: { "${params.outdir}/eqtl" },
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            mode: params.publish_dir_mode
+        ]
+    }
     withName:MANHATTAN {
         publishDir = [
             path: { "${params.outdir}/plots/manhattan" },
