placeholder freq inserted to test; need to check fit_model for def perm_seed crash

--- a/nextflow.config
+++ b/nextflow.config
@@ -39,7 +39,9 @@ params {
 
     // plink2-format frequency file for normalising SNPs for relatedness calculation
     // see https://www.cog-genomics.org/plink/2.0/input#read_freq
-    freq    = null
+    // it points to a placeholder empty file by default because of how NF handles optional inputs
+    // DO NOT CALL YOUR FILE dummy_file.txt
+    freq    = "${projectDir}/assets/dummy_file.txt"
 
     // global minimum allele frequency cutoff
     maf_min = null
