--- a/nextflow.config
+++ b/nextflow.config
@@ -49,6 +49,12 @@ params {
     // minimum allele frequency cutoff for GRM calculation
     maf_min_grm = 0.1
 
+    // minimum eigenvalue allowed for the phenotype covariance matrix
+    // small negative eigenvalues are expected and can be caused by numerical errors
+    min_allowed_eig = -1e-2
+    // replacement value for negative eigenvalues
+    eig_replacement = 1e-6
+
     // use dosage instead than hard calls if available
     use_dosage = true
 
