complex eigen in fit_null_model

--- a/nextflow.config
+++ b/nextflow.config
@@ -265,7 +265,7 @@ manifest {
     homePage        = 'https://github.com/birneylab/flexlmm'
     description     = "Flexible linear mixed model framework for Genome Wide Association Studies"
     mainScript      = 'main.nf'
-    nextflowVersion = '!>=23.04.0'
+    nextflowVersion = '!25.04.6'
     version = '2.0.0'
     doi             = ''
 }
