--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,6 +18,13 @@ process {
             pattern: '*_versions.yml'
         ]
     }
+    withlabel:PGEN_GENERATION {
+        publishDir = [
+            path: { "${params.outdir}/input_genotypes/" },
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            mode: params.publish_dir_mode,
+        ]
+    }
     withName:TRANSFORM_PHENOTYPES {
         ext.prefix = 'transformed_phenotypes'
     }
